crates/plotnik-lib/tests/05-typegen/definitions/error_multiple_uncaptured_outputs.txt
A = [X: (identifier)]
B = [Y: (number)]
Q = (program (A) (B))
==== diagnostics ====
error: 2 expressions here produce a value but none is captured
 --> query.ptk:3:5
  |
3 | Q = (program (A) (B))
  |     ^^^^^^^^^---^---^
  |              |   |
  |              |   produces a value
  |              produces a value
  |
help: capture each expression explicitly: `(X) @x (Y) @y`
